# cpp-coverage-stub

./: CMakeLists.txt
cmake/: CodeCoverage.cmake
tests/: CMakeLists.txt  test.cpp
